--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,8 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Niranjan Hegde, I am changing the default text.
+            Hi! I am Niranjan Hegde, I changed the text locally.
+            
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
