[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,1 +1,23 @@
-
+<html>
+    <head>
+        <title>
+            Article one html file.
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href = '/'>Link to home page</a>
+            <hr/>
+        </div>
+        <div>
+            <h1>This is the header file for article one</h1>
+            <p>Paragraphs begin for article one from here...</p>
+        </div>
+        <div>
+            <p>Paragraphs begin for article one from here...</p>
+        </div>
+        <div>
+            <p>Paragraphs begin for article one from here...</p>
+        </div>
+    </body>
+</html>
