--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -6,19 +6,21 @@
         </title>
     </head>
     <body>
-        <div>
-            <a href = '/'>Link to home page</a>
-            <hr/>
-        </div>
-        <div>
-            <h1>This is the header file for article one</h1>
-            <p>Paragraphs begin for article one from here...</p>
-        </div>
-        <div>
-            <p>Paragraphs begin for article one from here...</p>
-        </div>
-        <div>
-            <p>Paragraphs begin for article one from here...</p>
+        <div class = "container">
+            <div>
+                <a href = '/'>Link to home page</a>
+                <hr/>
+            </div>
+            <div>
+                <h1>This is the header file for article one</h1>
+                <p>Paragraphs begin for article one from here...</p>
+            </div>
+            <div>
+                <p>Paragraphs begin for article one from here...</p>
+            </div>
+            <div>
+                <p>Paragraphs begin for article one from here...</p>
+            </div>
         </div>
     </body>
 </html>
