[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,6 +4,7 @@
         <title>
             Article one html file.
         </title>
+        <link  rel = "stylesheet" href = "/ui/style.css">
     </head>
     <body>
         <div class = "container">
