--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,6 +3,8 @@
         <title>
             Article one html file.
         </title>
+        <meta name ="viewport" content="width=device-width, initial-scale = 1">
+        <link  rel = "stylesheet" href = "/ui/style.css">
     </head>
     <body>
         <div class = "container">
