[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,12 +5,11 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="/ui/madi.png" id = "madi" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id = "main-text" class="center text-big bold">
             Hi! I am Niranjan Hegde, I changed the text locally.
-            
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
