[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,7 @@
             Hi! I am Niranjan Hegde, I changed the text locally.
         </div>
         <script type="text/javascript" src="/ui/main.js">
+        alert("Loading");
         </script>
     </body>
 </html>
