[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,8 +11,10 @@
         <div id = "main-text" class="center text-big bold">
             Hi! I am Niranjan Hegde, I changed the text locally.
         </div>
+        <script>
+            alert("Loading");
+        </script>
         <script type="text/javascript" src="/ui/main.js">
-        alert("Loading");
         </script>
     </body>
 </html>
