[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
                     Professional
                 </h3>
                 <hr/>
-                I am still a student.
+                <p>I am still a student.</p>
             </div>
         </div>
         
