[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,9 @@
                 <hr/>
                 <p>I am still a student.</p>
             </div>
+            <div class = "footer">
+                This button <button id = "counter">Click me!</button> is clicked <span id = "count">0 times</span>
+            </div>
         </div>
         
         
